[gd_scene load_steps=4 format=3]

[ext_resource type="Script" path="res://Objects/breakable_container.gd" id="1"]
[ext_resource type="Texture2D" path="res://Textures/Pickups/container.png" id="2"]

[sub_resource type="RectangleShape2D" id="1"]
size = Vector2(32, 32)

[node name="BreakableContainer" type="StaticBody2D" groups=["container"]]
collision_layer = 2
collision_mask = 1
script = ExtResource("1")

[node name="Sprite2D" type="Sprite2D" parent="."]
scale = Vector2(0.5, 0.5)
texture = ExtResource("2")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("1")

[node name="HurtBox" type="Area2D" parent="." groups=["container_hurtbox"]]
collision_layer = 4
collision_mask = 8

[node name="CollisionShape2D" type="CollisionShape2D" parent="HurtBox"]
shape = SubResource("1")

[node name="BreakParticles" type="CPUParticles2D" parent="."]
emitting = false
amount = 20
lifetime = 0.5
one_shot = true
explosiveness = 0.9
randomness = 0.5
emission_shape = 1
emission_sphere_radius = 16.0
direction = Vector2(0, -1)
spread = 180.0
gravity = Vector2(0, 300)
initial_velocity_min = 50.0
initial_velocity_max = 150.0
scale_amount_min = 2.0
scale_amount_max = 4.0
color = Color(0.6, 0.4, 0.2, 1)

[node name="BreakSound" type="AudioStreamPlayer2D" parent="."]
volume_db = -5.0
